# werewolf

./: .gitignore  Cargo.toml  LICENSE  README.md
client/: Cargo.toml
server/: Cargo.toml
server/src/: event.rs  main.rs  network.rs  player.rs  terminal.rs
src/: client.rs  event.rs  game.rs  main.rs  network.rs  player.rs  roles.rs  server.rs  terminal.rs  utility.rs
static/: index.html
